Fix sorting by date. This was using the raw date string instead of the parsed date.